--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@
 *.sw?
 
 /docs
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Docker
+*.log
