feat: add Redis service to Docker Compose configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,24 @@ services:
     networks:
       - tabnews-network
 
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    container_name: tabnews-redis
+    restart: unless-stopped
+    command: redis-server --appendonly yes --requirepass redis123
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - tabnews-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+
   # Backend API
   backend:
     build:
@@ -31,12 +49,14 @@ services:
       NODE_ENV: development
       PORT: 3000
       MONGODB_URI: mongodb://admin:admin123@mongodb:27017/tabnews?authSource=admin
+      REDIS_URL: redis://:redis123@redis:6379
     volumes:
       - ./backend/src:/app/src
       - ./backend/package.json:/app/package.json
       - backend_node_modules:/app/node_modules
     depends_on:
       - mongodb
+      - redis
     networks:
       - tabnews-network
 
@@ -69,5 +89,6 @@ networks:
 volumes:
   mongodb_data:
   mongodb_config:
+  redis_data:
   backend_node_modules:
   frontend_node_modules:
