feat: refactor environment configuration, enhance server initialization, and update MongoDB connection handling

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,48 @@
-# Variáveis de Ambiente - Backend
+# ============================================================
+# CONFIGURAÇÕES DO SERVIDOR
+# ============================================================
 
-# Server
-NODE_ENV=development
+# Porta do servidor (padrão: 3000)
 PORT=3000
 
-# Database (MongoDB)
-MONGODB_URI=mongodb://admin:admin123@localhost:27017/tabnews?authSource=admin
+# development | production
+NODE_ENV=development
 
-# CORS
-ALLOWED_ORIGINS=http://localhost:5173,http://localhost:80
+# ============================================================
+# BANCO DE DADOS - MONGODB
+# ============================================================
 
-# JWT (se for implementar autenticação)
-# JWT_SECRET=your-secret-key-here
-# JWT_EXPIRES_IN=7d
+# URI de conexão MongoDB
+# Formato: mongodb://usuario:senha@host:porta/database
+# Exemplo local: mongodb://localhost:27017/tabnews
+# Exemplo Docker: mongodb://mongodb:27017/tabnews
+MONGODB_URI=mongodb://mongodb:27017/tabnews
+
+# ============================================================
+# CACHE - REDIS
+# ============================================================
+
+# URL de conexão Redis
+# Formato: redis://[[usuario]:senha@]host:porta[/database]
+# Exemplo local: redis://localhost:6379
+# Exemplo Docker com senha: redis://:redis123@redis:6379
+REDIS_URL=redis://:redis123@redis:6379
+
+# ============================================================
+# AUTENTICAÇÃO - JWT
+# ============================================================
+
+# Chave secreta para assinar tokens JWT
+# IMPORTANTE: Altere para uma chave forte em produção!
+# Gere com: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=your-super-secret-jwt-key
+
+# Tempo de expiração do token JWT, em dias
+JWT_EXPIRES_IN=7d
+
+# ============================================================
+# CORS - ORIGENS PERMITIDAS
+# ============================================================
+
+# URLs permitidas para fazer requisições (separadas por vírgula)
+CORS_ORIGINS=http://localhost:5173,http://localhost:3000
