feat: add rate limiting configuration to environment variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -46,3 +46,13 @@ JWT_EXPIRES_IN=7d
 
 # URLs permitidas para fazer requisições (separadas por vírgula)
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+
+# ============================================================
+# RATE LIMITING
+# ============================================================
+
+# Número máximo de requisições por janela de tempo
+RATE_LIMIT_MAX=100
+
+# Janela de tempo em minutos
+RATE_LIMIT_WINDOW_MS=15
